# Teil1_Parkhaus_Simulation_Plannung

./: .gitignore  CMakeLists.txt  README.MD
docs/: Erklärung.md  Statistiken.md
docs/examples/: CSV_FILE_NORMAL_MODE.csv  CSV_FILE_VERBOSE_MODE.csv
include/: Car.h  GenericVehicle.h  Parkhaus.h  Queue.h  Settings.h  Simulation.h  SimulationObject.h  Stats.h  VehicleList.h  config.h  home.h  placeholder.txt  simulation.h  storage.h  types.h  ui.h
include/add-headers/: Stats.h  demand.h  gate_routing.h  rng.h
include/io/: ConfigFileHandler.h  GraphHandler.h  SaveHandler.h
include/ui/: ui.h  ui_config.h  ui_home.h  ui_simulation.h  ui_statistics.h  ui_storage.h
include/utils/: RNG.h  StatList.h  VehicleList.h
src/: Car.psc  Parkhaus.psc  Queue.psc  Simulation.psc  Stats.psc  config.psc  demand.psc  gate_routing.psc  home.psc  main.c  main.psc  simulation.c  simulation.psc  storage.psc  ui.psc
src/generic/: GenericVehicle.psc  RNG.psc  SimulationObject  StatList.psc  VehicleList.psc
src/io/: ConfigFileHandler.psc  GraphHandler  GraphHandler.psc  SaveHandler.psc
src/ui/: config.psc  home.psc  main.psc  simulation.psc  storage.psc  ui.psc  ui_statistics.psc
